--- a/CSS/global/custom-props.css
+++ b/CSS/global/custom-props.css
@@ -10,6 +10,7 @@
     --clr-neutral-8: hsla(0, 0%, 100%, 0.75);
     --clr-neutral-9: hsla(25, 88%, 38%, 0.35);
     --clr-neutral-10: hsl(0, 0%, 30%);
+    --clr-neutral-11: hsl(14, 100%, 50%);
     /* ----------------------------------- */
 
     /* --------- Special colors ---------- */
