--- a/CSS/sections/menu.css
+++ b/CSS/sections/menu.css
@@ -1,69 +1,50 @@
 .menu {
-    background: url('../../assets/imgs/coffee-background.jpg');
-    background-size: cover;
-    background-position: center;
     box-shadow: 0 0 48px var(--clr-neutral-2);
     border-top: var(--border-thickness-2) double var(--clr-neutral-2);
-}
-
-.menu::before {
-    content: '';
-    position: absolute;
-    inset: 0;
-    background-color: var(--bg-dark-3);
+    background: linear-gradient(90deg, black, var(--clr-neutral-5), black);
 }
 
 .menu__content {
-    /* Fallbacks */
-    min-height: 75vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
+    width: min(var(--wrapper-width), var(--wrapper-max-width));
+    margin: 50px auto;
+}
 
-    min-height: 75svh;
-    width: 100%;
+.menu__search-bar {
+    position: relative;
+}
+
+.menu__search-form {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: var(--clr-neutral-9);
+    padding: 10px 0;
+    border-radius: 25px;
+    width: 100%;
+    box-shadow: 10px 10px 10px var(--bg-dark-3);
 }
 
-.menu__list {
-    display: flex;
-    gap: 25px;
-    padding: 1rem 1.5rem;
-    margin: 6.25rem auto 1.5rem;
-    transition: var(--transition-time-1);
-    position: absolute;
-    left: 0;
+.menu__card-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
 }
 
 .menu__card {
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-width: 14.0625rem;
-    min-height: 12.5rem;
-    padding: 0.625rem;
-    margin-block: 1.5rem;
-    border-radius: 25px;
-    background-color: var(--bg-dark-3);
-    box-shadow: 10px 10px 20px var(--bg-dark-1);
     position: relative;
-    transition: var(--transition-time-1);
+    border-radius: 10px;
+    min-height: 250px;
     cursor: pointer;
-}
-
-.menu__card::before {
-    content: '';
-    position: absolute;
-    inset: 0;
-    background-color: var(--bg-dark-3);
-    border-radius: inherit;
-    z-index: 1;
-    opacity: 0;
     transition: var(--transition-time-1);
+    box-shadow: 10px 10px 10px var(--bg-dark-3);
 }
 
-.drinks-list:hover {
-    backdrop-filter: blur(10px);
+.menu__card:hover {
+    transform: scale(1.05);
 }
 
 .menu__card-title {
@@ -71,23 +52,17 @@
     font-size: 2rem;
     text-shadow: 0 0 10px var(--clr-neutral-3);
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
     z-index: 1;
-    padding: 0.625rem 1rem;
+    padding: 10px 16px;
     background-color: var(--bg-dark-3);
     border-radius: inherit;
+
 }
 
-.menu__card:hover {
-    transform: scale(1.04) rotate(-5deg);
-}
-
-.menu__card:hover::before {
-    opacity: 1;
-}
-
-.menu__card img {
-    position: absolute;
-    inset: 0;
+.menu__card-img {
     width: 100%;
     height: 100%;
     object-fit: cover;
