--- a/CSS/utils/buttons.css
+++ b/CSS/utils/buttons.css
@@ -19,3 +19,32 @@
     border-top-color: var(--clr-neutral-3);
     border-bottom-color: var(--clr-neutral-3);
 }
+
+.highlited-btn {
+    /* Fallbacks */
+    font-size: 0.8125rem;
+
+    font-size: clamp(0.8125rem, 0.6767241379310345rem + 0.8045977011494253vw, 1rem);
+    font-weight: bold;
+    text-shadow: 3px 3px 5px var(--clr-neutral-6);
+    color: var(--clr-neutral-1);
+    background-color: var(--bg-clr, var(--clr-neutral-3));
+    border: var(--border-thickness-4) solid var(--clr-neutral-3);
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: var(--transition-time-1);
+}
+
+.highlited-btn.primary:hover,
+.highlited-btn.primary:focus {
+    --bg-clr: var(--clr-neutral-7);
+}
+
+.highlited-btn.secondary {
+    --bg-clr: transparent;
+}
+
+.highlited-btn.secondary:hover,
+.highlited-btn.secondary:focus {
+    --bg-clr: var(--clr-neutral-7);
+}
