--- a/CSS/sections/header.css
+++ b/CSS/sections/header.css
@@ -111,9 +111,11 @@ header:hover {
 }
 
 .main-nav__icon {
+    --shadow-clr: transparent;
+
     float: left;
     margin-right: 4px;
-    color: var(--clr-neutral-4);
+    color: var(--clr-neutral-3);
     transition: var(--transition-time-1);
 }
 
@@ -122,9 +124,7 @@ header:hover {
 .main-nav__list-item:focus-within .main-nav__link,
 .main-nav__list-item:focus-within .main-nav__icon,
 .main-nav__btn:hover,
-.main-nav__btn:hover .main-nav__icon,
-.main-nav__btn:focus,
-.main-nav__btn:focus .main-nav__icon {
+.main-nav__btn:focus {
     color: var(--clr-neutral-3);
 }
 
@@ -214,13 +214,19 @@ header:hover {
         letter-spacing: var(--letter-spacing);
         border-top: var(--border-thickness-3) solid var(--clr-neutral-10);
         padding: 10px 5px;
-        background-color: var(--bg-dark-5);
+        backdrop-filter: blur(15px);
     }
 
     .main-nav__list-item:first-child {
+        border-top-color: transparent;
         border-top-left-radius: 20px;
         border-top-right-radius: 20px;
+    }
 
+    .main-nav__list-item:last-child {
+        border-bottom-color: transparent;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
     }
 
     .main-nav__list-item:not(:last-child):hover,
@@ -228,19 +234,16 @@ header:hover {
         background-color: var(--bg-dark-8);
     }
 
-    .main-nav__list-item:last-child {
-        padding: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-    }
-
-    .main-nav__icon {
+    .main-nav__link .main-nav__icon {
+        padding: 0 5px;
         margin-right: 0;
     }
 
     .main-nav__btns {
         display: flex;
         justify-content: space-evenly;
+        align-items: center;
+        margin: 10px 0;
     }
 
     .main-nav__btns.visible {
@@ -253,7 +256,6 @@ header:hover {
 
         font-size: clamp(0.8125rem, 0.7169811320754716rem + 0.5660377358490567vw, 1rem);
         letter-spacing: var(--letter-spacing);
-        width: 100%;
         padding: 10px 5px;
     }
 
