Added button to expand and collapse the navbar

--- a/CSS/global/custom-props.css
+++ b/CSS/global/custom-props.css
@@ -11,6 +11,7 @@
     --clr-neutral-9: hsla(25, 88%, 38%, 0.35);
     --clr-neutral-10: hsl(0, 0%, 30%);
     --clr-neutral-11: hsl(14, 100%, 50%);
+    --clr-neutral-11: hsl(0, 0%, 50%);
     /* ----------------------------------- */
 
     /* --------- Special colors ---------- */
