--- a/CSS/sections/controls.css
+++ b/CSS/sections/controls.css
@@ -11,6 +11,7 @@
     inset: auto 0 0 auto;
     z-index: 5;
     background-color: var(--bg-dark-2);
+    overflow: visible;
 }
 
 .controls__scroll-btn {
