--- a/CSS/utils/buttons.css
+++ b/CSS/utils/buttons.css
@@ -1,10 +1,10 @@
 .action-button {
     font-weight: bold;
     font-size: 1.125rem;
-    height: 2.5rem;
+    min-height: 2.5rem;
     width: 2.5rem;
     border-radius: 50%;
-    background-color: var(--bg-dark-3);
+    background-color: var(--bg-clr, var(--bg-dark-3));
     border: var(--border-thickness-1) solid var(--border-clr, var(--clr-neutral-3));
     border-top-color: transparent;
     border-bottom-color: transparent;
