--- a/CSS/utils/buttons.css
+++ b/CSS/utils/buttons.css
@@ -13,7 +13,7 @@
 }
 
 .action-button:hover,
-.action-button:focus {
+.action-button:focus-visible {
     color: var(--text-clr, var(--clr-neutral-3));
     box-shadow: 0 0 16px var(--shadow-clr, var(--clr-neutral-3));
     border-top-color: var(--clr-neutral-3);
@@ -28,7 +28,7 @@
     font-weight: bold;
     color: var(--clr-neutral-1);
     background-color: var(--bg-clr, var(--clr-neutral-3));
-    border: var(--border-thickness-4) solid var(--clr-neutral-3);
+    border: var(--border-thickness-4) solid var(--border-clr, var(--clr-neutral-3));
     padding: 5px 10px;
     border-radius: 5px;
     transition: var(--transition-time-1);
@@ -47,7 +47,7 @@
 }
 
 .highlited-btn.primary:hover,
-.highlited-btn.primary:focus {
+.highlited-btn.primary:focus-visible {
     --bg-clr: var(--clr-neutral-7);
 }
 
@@ -56,7 +56,7 @@
 }
 
 .highlited-btn.secondary:hover,
-.highlited-btn.secondary:focus {
+.highlited-btn.secondary:focus-visible {
     --bg-clr: var(--clr-neutral-7);
 }
 
