--- a/CSS/sections/plans.css
+++ b/CSS/sections/plans.css
@@ -85,7 +85,7 @@
     z-index: 1;
     border-bottom: var(--border-thickness-2) solid var(--border-clr);
     padding: 1rem 0;
-    font-family: var(--font-2);
+    font-family: var(--font-2), 'Times New Roman', Times, serif;
     font-size: 2rem;
     text-shadow: 0 0 16px var(--shadow-clr);
 }
