--- a/CSS/sections/header.css
+++ b/CSS/sections/header.css
@@ -94,15 +94,15 @@ header.collapsed {
 .main-nav__title {
     display: inline-block;
     font-size: 0;
-    font-family: var(--font-2);
+    font-family: var(--font-2), 'Times New Roman', Times, serif;
     font-weight: bold;
     color: var(--clr-neutral-1);
     border: var(--border-thickness-1) double var(--clr-neutral-3);
     border-left: none;
     border-radius: 20px;
-    padding: 5px 10px;
+    padding: 5px 8px;
     margin-bottom: clamp(0, 2px - 0.5vw, 2px);
-    margin-left: -4px;
+    margin-left: -5px;
     transform: translateX(-60%) scaleY(0.75) scaleX(0.1);
     transition: var(--transition-time-2) ease;
 }
@@ -138,15 +138,24 @@ header.collapsed {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 16px;
+    gap: 13px;
 }
 
 .main-nav__list-item {
-    padding: 4px 0;
     transition: var(--transition-time-1);
     cursor: pointer;
     border-bottom: var(--border-thickness-4) solid transparent;
     transition: var(--transition-time-1);
+}
+
+.main-nav__list-item button {
+    font-size: inherit;
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    padding: 4px 0;
+    border: none;
+    border-radius: inherit;
 }
 
 .main-nav__list-item:hover,
@@ -156,7 +165,7 @@ header.collapsed {
 }
 
 .main-nav__link {
-    font-family: var(--font-1);
+    font-family: var(--font-1), 'Times New Roman', Times, serif;
     font-weight: bold;
     transition: var(--transition-time-1);
 }
@@ -261,8 +270,15 @@ header.collapsed {
         text-align: center;
         letter-spacing: var(--letter-spacing);
         border-top: var(--border-thickness-3) solid var(--clr-neutral-10);
-        padding: 10px 5px;
         backdrop-filter: blur(15px);
+    }
+
+    .main-nav__list-item button {
+        padding: 10px 5px;
+    }
+
+    .main-nav__list-item:not(:last-child) .main-nav__icon {
+        float: left;
     }
 
     .main-nav__list-item:first-child {
@@ -285,13 +301,15 @@ header.collapsed {
     .main-nav__link .main-nav__icon {
         padding: 0 5px;
         margin-right: 0;
+        position: absolute;
+        left: 5px;
     }
 
     .main-nav__btns {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        margin: 10px 0;
+        margin: 0;
     }
 
     .main-nav__btns.visible {
