--- a/CSS/global/custom-props.css
+++ b/CSS/global/custom-props.css
@@ -10,8 +10,9 @@
     --clr-neutral-8: hsla(0, 0%, 100%, 0.75);
     --clr-neutral-9: hsla(25, 88%, 38%, 0.35);
     --clr-neutral-10: hsl(0, 0%, 30%);
-    --clr-neutral-11: hsl(14, 100%, 50%);
     --clr-neutral-11: hsl(0, 0%, 50%);
+    --clr-neutral-12: hsl(14, 100%, 50%);
+    --clr-neutral-13: hsl(25, 100%, 60%);
     /* ----------------------------------- */
 
     /* --------- Special colors ---------- */
@@ -36,6 +37,7 @@
     --bg-dark-6: hsla(0, 0%, 0%, 0.35);
     --bg-dark-7: hsla(25, 75%, 47%, 0.11);
     --bg-dark-8: hsla(28, 100%, 6%, 0.678);
+    --bg-dark-9: hsla(28, 100%, 10%, 0.678);
     /* ----------------------------------- */
 
     /* -------------- Fonts -------------- */
