--- a/CSS/utils/buttons.css
+++ b/CSS/utils/buttons.css
@@ -26,29 +26,27 @@
 
     font-size: clamp(0.8125rem, 0.6767241379310345rem + 0.8045977011494253vw, 1rem);
     font-weight: bold;
-    color: var(--clr-neutral-1);
-    background-color: var(--bg-clr, var(--clr-neutral-3));
-    border: var(--border-thickness-4) solid var(--border-clr, var(--clr-neutral-3));
+    color: var(--text-clr, var(--clr-neutral-13));
+    background-color: var(--bg-clr, var(--clr-neutral-13));
+    border: var(--border-thickness-4) solid var(--border-clr, var(--clr-neutral-13));
     padding: 5px 10px;
     border-radius: 5px;
     transition: var(--transition-time-1);
 }
 
-.highlited-btn:not(:has(i)) {
-    text-shadow: 3px 3px 5px var(--shadow-clr, var(--clr-neutral-6));
-}
-
 .highlited-btn i {
-    color: var(--icon-clr, var(--clr-neutral-3));
+    color: var(--icon-clr, var(--clr-neutral-13));
 }
 
 .highlited-btn.primary {
     --icon-clr: var(--clr-neutral-6);
+    --text-clr: var(--clr-neutral-6);
 }
 
 .highlited-btn.primary:hover,
 .highlited-btn.primary:focus-visible {
-    --bg-clr: var(--clr-neutral-7);
+    --bg-clr: var(--clr-neutral-3);
+    --border-clr: var(--clr-neutral-3);
 }
 
 .highlited-btn.secondary {
@@ -57,7 +55,10 @@
 
 .highlited-btn.secondary:hover,
 .highlited-btn.secondary:focus-visible {
-    --bg-clr: var(--clr-neutral-7);
+    --text-clr: var(--clr-neutral-6);
+    --icon-clr: var(--clr-neutral-6);
+    --bg-clr: var(--clr-neutral-3);
+    --border-clr: var(--clr-neutral-3);
 }
 
 .locked {
@@ -67,14 +68,3 @@
 .locked i {
     color: var(--clr-neutral-3);
 }
-
-
-/* ---------- Media queries ---------- */
-
-@media (max-width: 50rem) {
-    .highlited-btn.primary {
-        --icon-clr: var(--clr-neutral-3);
-    }
-}
-
-/* ----------------------------------- */
