Improved menu section

--- a/CSS/sections/menu.css
+++ b/CSS/sections/menu.css
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 25px;
+    gap: 5px;
     margin: 50px auto;
 }
 
@@ -85,6 +85,7 @@
 }
 
 .menu__card-title {
+    /* Fallbacks */
     font-size: 1rem;
 
     font-size: clamp(1rem, 0.6896551724137931rem + 1.839080459770115vw, 2rem);
@@ -113,6 +114,7 @@
     align-items: center;
     background-color: var(--clr-neutral-9);
     padding: 10px 0;
+    margin-bottom: 50px;
     border-radius: 25px;
     width: 100%;
     box-shadow: 10px 10px 10px var(--bg-dark-3);
@@ -128,6 +130,7 @@
     color: var(--clr-neutral-1);
     font-weight: bold;
     padding: 5px;
+    cursor: text;
 }
 
 .menu__search-input {
